# these are the headers for your project

noinst_HEADERS = \
	commands.h \
	directorylisting.h \
	engine_context.h \
	externalipresolver.h \
	FileZillaEngine.h \
	libfilezilla_engine.h \
	local_path.h \
	logging.h \
	misc.h \
	notification.h \
	optionsbase.h \
	option_change_event_handler.h \
	server.h \
	serverpath.h \
	setup.h \
	sizeformatting_base.h \
	socket.h \
	uri.h

